# babon

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  webpack-stats.json  webpack.config.js
auth/: serializers.py  urls.py  views.py
babon/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
babon/babon/: settings.py
babonApp/: apps.py  views.py
babonApp/migrations/: 0001_initial.py
backendApp/: urls.py  views.py
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/src/: App.tsx
frontend/static/frontend/: frontend-57e22ee9e2911b4ef8fa.js  frontend-942a2bb16389da338057.js
frontendApp/: package-lock.json  package.json
frontendApp/public/: index.html
frontendApp/src/: App.tsx
frontendApp/src/components/Login/: Login.tsx  LoginStyles.scss
frontendApp/static/frontend/: frontend-5409503b3c02100a9483.js
projects/: models.py  serializers.py  views.py
projects/migrations/: 0001_initial.py  0002_auto_20210615_0930.py  0003_auto_20210615_2114.py
