[tool.poetry]
name = "babon"
version = "0.1.0"
description = "tinder for group projects"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
flake8 = "^3.9.2"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
